# Local_sms

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/DISCUSSION_TEMPLATE/: general.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  windows-build.yml
apps/localmessenger_cli/: Cargo.toml
apps/localmessenger_cli/src/: main.rs
apps/localmessenger_server/: Cargo.toml
apps/localmessenger_server/src/: auth.rs  invite.rs  main.rs  rate_limit.rs  registry.rs  relay.rs
apps/tauri-client/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/tauri-client/src/: App.tsx  i18n.ts  styles.css  types.ts
apps/tauri-client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/tauri-client/src-tauri/capabilities/: default.json
apps/tauri-client/src-tauri/permissions/autogenerated/: accept_invite.toml  export_device_registration.toml  forward_message.toml  load_client_snapshot.toml  preview_invite.toml  refresh_peer_discovery.toml  send_media.toml  toggle_reaction.toml  verify_device.toml
apps/tauri-client/src-tauri/src/: commands.rs  connection_manager.rs  lib.rs  main.rs  media.rs  relay_client.rs  runtime.rs  state.rs  tray.rs
apps/tauri-client/src/components/: ChatSidebar.tsx  ChatWindow.tsx  InvitePanel.tsx  OnboardingPanel.tsx  PeerDiscoveryPanel.tsx  SettingsPanel.tsx  VerificationPanel.tsx
apps/tauri-client/src/lib/: backend.ts  mockBackend.ts
apps/tauri-client/src/store/: clientStore.ts
crates/core/: Cargo.toml
crates/core/src/: device.rs  error.rs  ids.rs  lib.rs  member.rs  verification.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: error.rs  identity.rs  kdf.rs  lib.rs  prekey.rs  ratchet.rs  x3dh.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: error.rs  lib.rs  peer.rs  registry.rs  service.rs  txt.rs
crates/localmessenger_core/: Cargo.toml
crates/localmessenger_core/src/: config.rs  domain.rs  invite.rs  lib.rs  security.rs  workflow.rs
crates/messaging/: Cargo.toml
crates/messaging/src/: channel.rs  engine.rs  envelope.rs  error.rs  group.rs  handshake.rs  lib.rs  session.rs
crates/server_protocol/: Cargo.toml
crates/server_protocol/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: cipher.rs  error.rs  lib.rs  models.rs  store.rs
crates/transport/: Cargo.toml
crates/transport/src/: cert.rs  config.rs  connection.rs  endpoint.rs  error.rs  frame.rs  lib.rs
design/mock-client/: app.js  index.html  styles.css
docker/: .env  .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
docs/: architecture.md  protocol.md  roadmap.md  server-relay.env.example  server-relay.md  threat-model.md  user-guide.md
