[workspace]
members = [
    "apps/localmessenger_server",
    "apps/tauri-client/src-tauri",
    "crates/core",
    "crates/crypto",
    "crates/discovery",
    "crates/messaging",
    "crates/server_protocol",
    "crates/storage",
    "crates/transport",
]
default-members = [
    "crates/core",
    "crates/crypto",
    "crates/discovery",
    "crates/messaging",
    "crates/server_protocol",
    "crates/storage",
    "crates/transport",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-only"
authors = ["rimus"]

[workspace.dependencies]
aes-gcm = { version = "0.10", features = ["aes"] }
base64 = "0.22"
bincode = "1.3"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
futures-util = "0.3"
hkdf = "0.12"
hmac = "0.12"
libmdns = "0.10"
mdns = "3.0"
quinn = { version = "0.11", features = ["runtime-tokio", "rustls-ring"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rcgen = "0.14"
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-build = { version = "2" }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
zeroize = { version = "1.8", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"
