[package]
name = "localmessenger_server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
base64.workspace = true
bincode.workspace = true
ed25519-dalek.workspace = true
localmessenger_core = { path = "../../crates/core" }
localmessenger_server_protocol = { path = "../../crates/server_protocol" }
localmessenger_crypto = { path = "../../crates/crypto" }
localmessenger_transport = { path = "../../crates/transport" }
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true

[lints]
workspace = true
