[package]
name = "localmessenger_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
localmessenger_crypto = { path = "../crypto" }
bincode.workspace = true
serde.workspace = true
sha2.workspace = true

[dev-dependencies]
rand_core.workspace = true

[lints]
workspace = true
