[package]
name = "localmessenger_crypto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aes-gcm.workspace = true
bincode.workspace = true
ed25519-dalek.workspace = true
hkdf.workspace = true
rand_core.workspace = true
serde.workspace = true
sha2.workspace = true
x25519-dalek.workspace = true
zeroize.workspace = true

[lints]
workspace = true
