[package]
name = "localmessenger_discovery"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
futures-util.workspace = true
libmdns.workspace = true
localmessenger_core = { path = "../core" }
mdns.workspace = true
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
dns-parser = "0.8"

[lints]
workspace = true
