[package]
name = "localmessenger_messaging"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aes-gcm.workspace = true
bincode.workspace = true
ed25519-dalek.workspace = true
hkdf.workspace = true
localmessenger_core = { path = "../core" }
localmessenger_crypto = { path = "../crypto" }
localmessenger_transport = { path = "../transport" }
rand_core.workspace = true
serde.workspace = true
sha2.workspace = true
tokio.workspace = true

[dev-dependencies]
[lints]
workspace = true
