[package]
name = "localmessenger_server_protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
base64.workspace = true
hmac.workspace = true
localmessenger_core = { path = "../core" }
localmessenger_crypto = { path = "../crypto" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
rand_core.workspace = true

[lints]
workspace = true
