[package]
name = "localmessenger_storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aes-gcm.workspace = true
bincode.workspace = true
localmessenger_core = { path = "../core" }
localmessenger_crypto = { path = "../crypto" }
localmessenger_discovery = { path = "../discovery" }
rand_core.workspace = true
serde.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
zeroize.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
