[package]
name = "localmessenger_transport"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bincode.workspace = true
quinn.workspace = true
rcgen.workspace = true
rustls.workspace = true
serde.workspace = true
tokio.workspace = true

[lints]
workspace = true
